# awssy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  awssy.cabal  cabal.project  docker.build.sh  hyrax.build.sh  runAwssy.sh  runLocal.sh  stack.yaml
app/: Args.hs  Aws.hs  Main.hs  Settings.hs
buildDeps/: buildDepsProject-exe
docker/: Dockerfile  buildDocker.sh  runAwssy.sh  runLocal.sh  settings.js
src/: Aws.hs  Ui.hs
test/: DemoSpec.hs
