cabal-version:       2.2
name:                awssy
version:             0.2.1.16
-- synopsis
-- description:
homepage:            https://github.com/hyraxbio/awssy#readme
license:             BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              HyraxBio
maintainer:          andre@andrevdm.com
copyright:           2018-2019 HyraxBio
category:            Terminal
build-type:          Simple
extra-source-files:  README.md

executable awssy
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints
  other-modules:       Aws
                     , Args
  build-depends:       base
                     , protolude
                     , text
                     , bytestring
                     , directory
                     , filepath
                     , aeson
                     , cmdargs
                     , containers
                     , lens
                     , process
                     , req
                     , safe-exceptions
                     , temporary
                     , vector
                     , amazonka
                     , amazonka-core
                     , amazonka-ec2
                     , vty
                     , brick
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hyraxbio/awssy
