cabal-version:       2.2
name:                awssy
version:             0.3.0.4
-- synopsis
-- description:
homepage:            https://github.com/hyraxbio/awssy#readme
license:             BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              HyraxBio
maintainer:          andre@andrevdm.com
copyright:           2018-2020 HyraxBio
category:            Terminal
build-type:          Simple
extra-source-files:  README.md

executable awssy
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:        -threaded -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances -Widentities -fhide-source-paths -Wmissing-export-lists -Wpartial-fields -Werror=incomplete-patterns
  other-modules:       Args
                     , Paths_awssy
  build-depends:       base
                     , brickBedrock >= 0.1.7.5 && < 0.2.0.0
                     , protolude
                     , aeson
                     , aeson-pretty
                     , brick
                     , bytestring
                     , cmdargs
                     , Clipboard
                     , containers
                     , directory
                     , filepath
                     , lens
                     , lens-aeson
                     , process
                     , req
                     , safe-exceptions
                     , temporary
                     , text
                     , typed-process
                     , uuid
                     , vector
                     , vty
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hyraxbio/awssy
